src/components/album/track.module.css
.track {
	display: grid;
	grid-template-columns: 30px 1fr 50px 30px;
	align-items: center;
	padding: 8px 15px;
	border-radius: 10px;
}

.track p {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.extendedTrackInfo {
	grid-template-columns: 30px 2fr 1fr 1fr 50px 30px;
}

@media screen and (max-width: 1400px) {
	.extendedTrackInfo {
		grid-template-columns: 30px 2fr 1fr 50px 30px;
	}

	.extendedTrackInfo p:nth-child(4) {
		display: none;
	}
}

@media screen and (max-width: 1000px) {
	.extendedTrackInfo {
		grid-template-columns: 30px 1fr 50px 30px;
	}

	.extendedTrackInfo div:nth-child(3) {
		display: none;
	}

	.track p {
		font-size: 0.875rem;
	}
}

.index {
	display: flex;
	justify-content: center;
	align-items: center;
}

.more {
	margin-left: auto;
}

.menu {
	display: none !important;
	right: 0;

	border-radius: 8px;
	padding: 5px 0;

	background-color: rgb(45, 55, 72);

	min-width: 14rem;

	z-index: 100;

	& button {
		border-radius: 0;
		justify-content: space-between;
		min-height: 48px;
	}
}

.menuActive {
	display: inline-flex !important;
	position: absolute;
}

